# p2bin

./: .gitmodules  CMakeLists.txt  licence.txt  main.c  readme.md
lz_comp2/: LZSS.c  LZSS.h
